(fixed): last search result's bottom gap by adding an bottom spacer element

--- a/htdocs/assets/style.css
+++ b/htdocs/assets/style.css
@@ -922,6 +922,14 @@ video {
   height: 47vh;
 }
 
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[10px\] {
+  height: 10px;
+}
+
 .w-0 {
   width: 0px;
 }
